# axon

./: .clippy.toml  .gitignore  .mcp.json  AGENTS.md  Cargo.toml  README.md  build.rs
.codex/: config.toml
Formula/: axon.rb  dendrites.rb
scripts/: prepare_homebrew_release.sh
src/: lib.rs  main.rs  reasoning.rs
src/domain/: analyze.rs  ast.rs  mod.rs  model.rs  polyglot.rs  rust_analyzer.rs  rust_facts.rs  rust_syn.rs  rustdoc.rs  scanner.rs  semantic_annotations.rs
src/mcp/: mod.rs  prompts.rs  protocol.rs  resources.rs  router.rs  tools.rs  write_tools.rs
src/reasoning/: claims.rs  mod.rs
src/server/: bridge.rs  cytoscape.bundle.js  daemon.rs  mod.rs  stdio.rs  transport.rs  watcher.rs  web.html  web.rs
src/store/: cozo.rs  cozo_tests.rs  mod.rs
tests/: datalog_rules.rs  reasoning_integration.rs  scanner_bench.rs  self_integration.rs  sync_bench.rs
