[package]
name = "axon"
version = "0.4.12"
edition = "2024"
description = "Live Rust domain model graph for AI coding agents"
license = "MIT"

[dependencies]
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
clap = { version = "4", features = ["derive"] }
cozo = { package = "cozo-ce", version = "0.7.13-alpha.3", default-features = false, features = ["minimal", "rayon"] }
syn = { version = "2.0", features = ["full", "visit"] }
walkdir = "2"
ignore = "0.4.20"
notify = "8.2.0"
proc-macro2 = { version = "1.0.106", features = ["span-locations"] }
quote = "1.0.45"
ra_ap_ide = "=0.0.334"
ra_ap_load-cargo = "=0.0.334"
ra_ap_project_model = "=0.0.334"
ra_ap_vfs = "=0.0.334"
